[alacritty]: tweaks for macos

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -45,9 +45,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
+  padding:
   #  x: 0
-  #  y: 0
+   y: 25
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -61,7 +61,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  #decorations: full
+  decorations: transparent
 
   # Startup Mode (changes require restart)
   #
@@ -72,7 +72,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: Windowed
+  startup_mode: Maximized
 
   # Window title
   #title: Alacritty
@@ -232,7 +232,7 @@ font:
 colors:
   # Default colors
   primary:
-    background: "0x1f2335"
+    background: "#1e2030"
     foreground: "0xc0caf5"
 
   # Normal colors
