--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -129,5 +129,6 @@
   "quarto.mathjax.theme": "dark",
   "quarto.render.renderOnSave": true,
   "vim.vimrc.enable": true,
-  "vim.vimrc.path": "$HOME/dev/dotfiles/config/vscode/.vimrc"
+  "vim.vimrc.path": "$HOME/dev/dotfiles/config/vscode/.vimrc",
+  "julia.NumThreads": 4
 }
