--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,31 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
-  hooks:
-  - id: check-yaml
-  - id: end-of-file-fixer
-  - id: trailing-whitespace
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
+    hooks:
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
 
-# Replace any CRLF with LF, to maintain consistency
-- repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.1.13
-  hooks:
-  - id: remove-crlf
+  # Prettier - JSON files, etc.
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
+    hooks:
+      - id: prettier
+
+  # Replace any CRLF with LF, to maintain consistency
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.1.13
+    hooks:
+      - id: remove-crlf
+
+  # Formatting of Lua code
+  - repo: https://github.com/JohnnyMorganz/StyLua
+    rev: v0.17.1
+    hooks:
+      - id: stylua
+
+  # Indent/formatting of LaTeX style files
+  - repo: https://github.com/cmhughes/latexindent.pl.git
+    rev: V3.21
+    hooks:
+      - id: latexindent
