Convert colourscheme to Kanagawa

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,8 +51,8 @@ source $DOTFILES/tmux/statusline.sh
 # ===       Style        ===
 # ==========================
 
-set-option -g pane-active-border-style fg=colour39
-set-option -g pane-border-style fg=colour241
+set-option -g pane-active-border-style fg="#54546D"
+set-option -g pane-border-style fg="#2A2A37"
 
 # Undercurl support
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
