--- a/formatting/JuliaFormatter.toml
+++ b/formatting/JuliaFormatter.toml
@@ -5,3 +5,4 @@ conditional_to_if = true
 normalize_line_endings = "unix"
 separate_kwargs_with_semicolon = true
 whitespace_ops_in_indices = true
+always_for_in = true
