--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -92,6 +92,8 @@ window:
   # Override the variant of the GTK theme. Commonly supported values are `dark`
   # and `light`. Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
+  
+  option_as_alt: Both
 
 #scrolling:
 # Maximum number of lines in the scrollback buffer.
@@ -549,9 +551,6 @@ cursor:
 # Directory the shell is started in. If this is unset, or `None`, the working
 # directory of the parent process will be used.
 #working_directory: None
-
-# Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: false
 
 #mouse:
 # Click settings
