Update tmux conf to file change

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -45,7 +45,7 @@ set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window 
 # ===     Status bar     ===
 # ==========================
 
-source $DOTFILES/tmux/statusline.sh
+source $HOME/.config/tmux/statusline.sh
 
 # ==========================
 # ===       Style        ===
